--- a/week2/springwebtutorila/pom.xml
+++ b/week2/springwebtutorila/pom.xml
@@ -49,7 +49,13 @@
 <dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
-  
+	<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+<dependency>
+    <groupId>org.modelmapper</groupId>
+    <artifactId>modelmapper</artifactId>
+    <version>3.2.0</version>
 </dependency>
 
 
